# Processamento-de-video

./: README.md  index.html
imagens/: CMakeLists(1).txt  CMakeLists.txt  Código.txt  DisplayImage.cpp  Gravação de tela de 2025-10-22 10-50-59.webm  Gravação1.webm  Gravação2.webm  InstalaçãoOpenCV.txt  InstrucoesTeste.txt  RespostasRoadWatch.xlsx  main.cpp  pv2025_notas_Equipe_RoadWatch.xlsx  spv.cpp
